kube/ip-logic/logic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logic
spec:
  replicas: 1
  minReadySeconds: 15
  selector:
    matchLabels:
      app: logic
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: logic
    spec:
      containers:
        - image: moiseevdi/ip-simple-logic
          imagePullPolicy: Always
          name: logic
          ports:
            - containerPort: 5000
