kube/ip-logic/logic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logic
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: logic
