kube/ip-logic/logic-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: logic
spec:
  hosts:
  - logic
  http:
  - route:
    - destination:
        host: logic
        port:
          number: 80
